--- a/README.Rmd
+++ b/README.Rmd
@@ -16,14 +16,16 @@ knitr::opts_chunk$set(
 # menbayes
 
 <!-- badges: start -->
+[![NSF-2132247](https://img.shields.io/badge/NSF-2132247-blue.svg)](https://nsf.gov/awardsearch/showAward?AWD_ID=2132247)
+[![License: GPL v3](https://img.shields.io/badge/License-GPL%20v3-blue.svg)](https://www.gnu.org/licenses/gpl-3.0)
 [![R-CMD-check](https://github.com/gerardlab/menbayes/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/gerardlab/menbayes/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-Provides a suite of methods for Bayesian tests for Mendelian segregation in experimental autopolyploid populations. This is under different assumptions of meiosis.
+Provides a suite of methods for Bayesian tests for Mendelian segregation in experimental polyploid populations (for now, just tetraploids). This is under different assumptions of meiosis.
 
 ## Installation
 
-You can install the development version of menbayes from [GitHub](https://github.com/) with:
+You can install the development version of menbayes from [GitHub](https://github.com/gerardlab/menbayes) with:
 
 ``` r
 # install.packages("devtools")
