--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![NSF-2132247](https://img.shields.io/badge/NSF-2132247-blue.svg)](https://nsf.gov/awardsearch/showAward?AWD_ID=2132247)
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.8124363.svg)](https://doi.org/10.5281/zenodo.8124363)
 [![License: GPL v3](https://img.shields.io/badge/License-GPL%20v3-blue.svg)](https://www.gnu.org/licenses/gpl-3.0)
 [![R-CMD-check](https://github.com/gerardlab/menbayes/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/gerardlab/menbayes/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
